search v-alignment fix

--- a/src/scss/custom/ui-top.scss
+++ b/src/scss/custom/ui-top.scss
@@ -34,4 +34,8 @@
 			justify-content: center;
 		}
 	}
+
+	.col-search {
+		align-items: center;
+	}
 }
